--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -64,12 +64,12 @@
       height: 274px;
     }
   }
-  .mb-60{
-    margin-bottom: 60px !important;
-  }
-  .pt-60{
-    padding-top: 60px;
-  }
+  // .mb-60{
+  //   margin-bottom: 60px !important;
+  // }
+  // .pt-60{
+  //   padding-top: 60px;
+  // }
   
   .fs-60{
     @include pad-sm{
